--- a/myapp/src/components/lesson2/Styles.css
+++ b/myapp/src/components/lesson2/Styles.css
@@ -1,10 +1,57 @@
-
-.Ticket_lists {
-    background-color: #fff;
-    margin-top: 15px;
-    list-style: none;
-    font-size: 15px;
-    padding: 11px 16px;
-    border-bottom: 2px solid #333;
+.Cardticket_list {
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
+.Cardticket_list_text {
+    background-color: #fff;
+    font-size: 15px;
+    padding: 16px 15px;
+}
+
+.Cardticket_list_text > h3 {
+    font-size: 15px;
+}
+
+.place_time {
+    margin-top: 15px;
+    color: #757575;
+}
+
+.place_intro {
+    margin-top: 15px;
+    line-height: 1.4;
+}
+
+.btns{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.btn_buy_ticket {
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+    border: none;
+    background-color: #333;
+    color: #fff;
+}
+.btn_buy_ticket:hover {
+    background-color: #ccc;
+    color: #333;
+}
+.btn_get_ticket{
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+    border: none;
+    background-color: rgb(233, 100, 5);
+}
+
+.btn_get_ticket:hover {
+    background-color: #ccc;
+    color: #333;
+}
